# pick_two

./: Cargo.toml  pingora_conf.yaml  rustc-ice-2024-05-16T06_00_54-9937.txt
src/: client.rs  lib.rs  main.rs  x.html  y.html
src/parsers/: mod.rs  parse_details.rs
src/proxy/: client.rs
tests/: health_check.rs
