[package]
name = "pick-two"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "=4.5.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
log = "0.4"
env_logger = "0.9"
pingora = { version = "0.1.0" }
structopt = "0.3"
pretty_env_logger = "0.5"
jemallocator = "0.5"
async-trait = "0.1.42"
pingora-http = "0.1.1"
regex = "1.10.4"
http = "1.1.0"
scraper = "0.19.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name="pick-two"
